# django-app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __variables__.yml  docker-compose.yaml  pyproject.toml
src/: manage.py
src/app/: settings.py
src/cookbook/: models.py
src/cookbook/migrations/: 0001_initial.py
